Service.yaml
apiVersion: v1
kind: Service
metadata:
 name: hello-node
spec:
 ports:
   - protocol: TCP
     port: 80
     targetPort: 3000
 selector:
   app: hello-node
