Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: node-tzhiyong
spec:
 ingressClassName: nginx
 rules:
 - host: tzhiyong.sctp-sandbox.com
   http:
     paths:
     - backend:
         service:
           name: hello-node
           port:
             number: 80
       path: /
       pathType: Prefix
